# cmake_hello

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: hello.cpp
cli/: fibonacci.cpp
cmake/: RPATHHandling.cmake
include/fibonacci/: fibonacci.h  version.h.in
include/hello/: hello.hpp  version.hpp.in
src/: fibonacci.cpp  hello.cpp
tests/: CMakeLists.txt  test1.cpp
